# waylaunch

./: .gitmodules  CHANGES.md  README.md  dune-project  list_available_exec.opam  waylaunch.opam
.github/workflows/: main.yml
bindings/: bemenu_bindings.c  dune
src/: dune  main.ml
