opam-version: "2.0"
version: "0.2.0"
synopsis: "Waylaunch is a program launcher for Wayland"
maintainer: ["Kate <kit.ty.kate@disroot.org>"]
authors: ["Kate <kit.ty.kate@disroot.org>"]
license: "GPL-3.0-or-later"
tags: ["wayland" "program" "launcher" "sway"]
homepage: "https://github.com/kit-ty-kate/waylaunch"
bug-reports: "https://github.com/kit-ty-kate/waylaunch/issues"
depends: [
  "dune" {>= "2.7"}
  "ocaml" {>= "4.11"}
  "dune-configurator" {>= "2.7"}
  "bos" {>= "0.2.0"}
  "fpath" {>= "0.7.0"}
  "rresult" {>= "0.6.0"}
  "conf-pkg-config" {build}
  "conf-libwayland" {build}
  "conf-wayland-protocols" {build}
  "conf-xkbcommon" {build}
  "conf-cairo" {build}
  "conf-pango" {build}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/kit-ty-kate/waylaunch.git"
